# cpp_multithreading

./: README.md
ch_1/: concurrent_hello.cpp  notes.md  notes.rst
ch_2/: examples.cpp  notes.md  vector_sum.cpp
ch_3/: example_31.cpp  notes.md  thread_safe_vector.cpp  virtual_functions.cpp
ch_4/: bg_calc.cpp  notes.md  using_promises.cpp
ch_5/: SpinLock.h  atomic_flag.cpp
fiddly/: cat_cakes.cpp  producer_consumer.cpp  sum_numbers.cpp
fiddly/CatCakes/: Bakery.cpp  Bakery.hpp  CMakeLists.txt  Cat.cpp  Cat.hpp  Logger.cpp  Logger.hpp  cat_cakes.cpp
templates/: notes.md
